--- a/scss/_print.scss
+++ b/scss/_print.scss
@@ -1,17 +1,62 @@
 /* Print styles ---------------------- */
 
 @media print {
-    * {background: transparent !important;color: #000 !important; /* Black prints faster */box-shadow:none !important;text-shadow: none !important;}
-    a, a:visited {text-decoration: underline;}
+    * {background: transparent !important;color: #000 !important;box-shadow: none !important;text-shadow: none !important;}
+    a, a:visited {text-decoration: underline;font-size:1em;}
     a[href]:after {content: " (" attr(href) ")";}
     abbr[title]:after {content: " (" attr(title) ")";}
-  /* Don't show links for images, or javascript/internal links */
+    /* Don't show links for images, or javascript/internal links */
     .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }
-    pre, blockquote {border: 1px solid #999;page-break-inside: avoid;}
+    pre, blockquote {border:1px solid #999;page-break-inside: avoid;}
     thead {display: table-header-group;}
     tr, img {page-break-inside: avoid;}
     img {max-width: 100% !important;}
-    @page {margin: 0.5cm;}
+    @page {margin: 1cm;}
     p, h2, h3 {orphans: 3;widows: 3;}
     h2,h3 {page-break-after: avoid;}
+    article {
+        max-width: 100% !important;
+    }
+    .article-meta-button {
+        display: none;   
+    }
+
+    .swipe {
+        overflow: auto;
+    }
+    .swipe-wrap {
+        overflow: auto;
+        width: 100% !important;
+        max-width: 100% !important;
+        left: 0;
+        margin: 0;
+        
+        div {
+            float: none;
+            margin: 0 auto;
+            display: block;
+            width: 100%;
+            left: 0;
+            
+            img {
+                width: 100%;
+                margin: 0;
+            }
+        }
+    }
+
+    #next, #prev, #swipe-nav {
+        display: none;
+    }
+    
+    a.linkback {
+        display: block;
+        text-decoration: none;
+        font-size: 0.8em;
+        color: #888 !important;
+        
+        &:before {
+            content: "Link to this post: ";
+        }
+    }
 }
