--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,9 +1,11 @@
-﻿/* Load custom fonts */
+﻿/* Load custom fonts ---------------------- */
 
 $typeface-base: 'Source Sans Pro', sans-serif;
 $typeface-header: 'Merriweather', Georgia, serif;
+$typeface-header2: 'Droid Serif', Georgia, serif;
 
-@import 'https://fonts.googleapis.com/css?family=Merriweather:700|Source+Sans+Pro:400,700&subset=latin';
+@import 'https://fonts.googleapis.com/css?family=Merriweather:700|Source+Sans+Pro:400,700&subset=latin'; 
+//|Droid+Serif:700
 
 html {
   font-family: sans-serif;
