--- a/scss/_swipe.scss
+++ b/scss/_swipe.scss
@@ -53,19 +53,23 @@
   line-height: 1;
   
   button {
-    text-indent: -9999px;
-    border-radius: 50%;
-    height: 8px;
-    width: 8px;
     line-height: 0;
     font-size: 0;
-    margin: 0 3px;
-    background: #000;
+    margin: -10px -7px;
     display: inline-block;
-    padding: 0;
+    padding: 10px;
     outline: none;
     opacity: 0.3;
     
+    span {
+      height: 12px;
+      width: 12px;
+      text-indent: -9999px;
+      display: block;
+      background: #000;
+      border-radius: 50%;
+    }
+
     &.active {
     }
   }
