--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -1,57 +1,44 @@
 /* Styling for the article page ---------------------- */
 
 article {
-  width: 100%;
-  max-width: 36rem;
   margin: 0 auto;
+  max-width: 36rem;
   padding: 0 $base-padding;
+  width: 100%;
 }
 
 footer {
-  text-align: center;
   color: $color-light;
-  @include type-setting(-1);
-  padding: $base-padding*4 0;
+  font-size: $font-size-small;
+  padding: $base-padding * 4 0;
+  text-align: center;
 }
 
 /* Images ---------------------- */
 
-/* Add the image with this aspect ratio so it won't cause the page to jump when it loads */
-@mixin aspect-ratio($width, $height) {
-  position: relative;
-  padding-bottom: ($height / $width) * 100%;
-  img, video, iframe, object, embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-}
-
-.img-16x7 {
-  @include aspect-ratio(1600, 700);
-}
-
-figure {
+figure, 
+picture {
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="rgba(240,240,240,0.9)" d="M0 48v416h512V48H0zm480 384H32V80h448v352zM352 160c0 26.51 21.49 48 48 48s48-21.49 48-48-21.49-48-48-48-48 21.49-48 48zm96 240H64l96-256 128 160 64-48 96 144z"/></svg>') no-repeat center center;
+  background-size: 50px 50px;
   text-align: center;
 }
 
 .hero,
 .full-width {
-  width: 100vw;
-  position: relative;
   left: 50%;
-  right: 50%;
   margin: 0;
   margin-left: -50vw;
-  margin-right: -50vw; 
-  background: url(../images/blank-image.svg) no-repeat center center;
-  background-size: 50px 50px;
+  margin-right: -50vw;
+  position: relative;
+  right: 50%;
+  width: 100vw;
 }
 
 .hero {
   background-color: $color-link;
+  color: #fff;
+  line-height: 0;
+  min-height: 100px;
 
   img {
     width: 100%;
@@ -60,40 +47,39 @@ figure {
 }
 
 figcaption {
-  text-align: center;
-  color: #888;
+  color: $color-light;
+  font-size: $font-size-small;
   margin-top: $base-padding/2;
-  @include type-setting(-1);
+  text-align: center;
 }
-
 
 /* Author and date ---------------------- */
 
 .article-meta {
   color: $color-light;
-  @include type-setting(-1);
-  text-align: left;
   display: table;
+  font-size: $font-size-small;
   margin: 0 auto;
-  
-  img, 
+  text-align: left;
+
+  img,
   span {
-    vertical-align: middle;
     display: table-cell;
+    vertical-align: middle;
   }
-  
+
   author {
     display: block;
     font-weight: 700;
-  } 
+  }
 }
 
 .article-meta-avatar {
   border-radius: 50%;
-  height: 50px;
-  width: 50px;
   float: left;
+  height: 50px;
   margin-right: $base-padding;
+  width: 50px;
 }
 
 .article-meta-aside {
@@ -103,122 +89,113 @@ figcaption {
 /* Buttons for Facebook, Twitter and Comment  ---------------------- */
 
 .article-meta-button {
-  color: #888;
-  border: 1px solid #888;
-  text-decoration: none;
-  padding: $base-padding/1.5 $base-padding;
-  font-size: 0.8em;
+  border: 1px solid $color-light;
   border-radius: 0.2rem;
-  font-weight: 700;
-  width: 32.5%;
+  color: #888;
   display: inline-block;
+  font-size: 0.8em;
+  font-weight: 700;
+  margin-right: $base-padding/2;
+  padding: $base-padding/1.5 $base-padding;
   text-align: center;
+  text-decoration: none;
   white-space: nowrap;
 
   svg {
     height: 1em;
-    width: 1em;
     margin-right: 3px;
-    margin-top: -3px;
+    margin-bottom: -4px;
+    width: 1em;
   }
-  
+
   span {
     display: none;
   }
 
-  &:hover, 
-  &:focus, 
+  &:hover,
+  &:focus,
   &:active {
-    background: #888;
+    background: $color-light;
     color: #fff;
-    
+
     .icon {
       fill: #fff;
     }
   }
-  
+
   &:active {
-    background: darken(#888, 15%);
+    background: darken($color-light, 15%);
   }
 
   &.message {
-    border-color: #57AD68;
-    color: #57AD68;
-    
-    &:hover, 
+    border-color: $color-green;
+    color: $color-green;
+
+    &:hover,
     &:focus {
-      background: #57AD68;
+      background: $color-green;
       color: #fff;
     }
-    
+
     &:active {
-      background: darken(#57AD68, 15%);
-      border-color: darken(#57AD68, 15%);
+      background: darken($color-green, 15%);
+      border-color: darken($color-green, 15%);
     }
-  }   
-  
+  }
+
   &.twitter {
-    border-color: #1da1f2;
+    border-color: $color-twitter-blue;
     color: #1da1f2;
-    
-    &:hover, 
+
+    &:hover,
     &:focus {
-      background: #1da1f2;
+      background: $color-twitter-blue;
       color: #fff;
     }
-    
+
     &:active {
-      background: darken(#1da1f2, 15%);
-      border-color: darken(#1da1f2, 15%);
+      background: darken($color-twitter-blue, 15%);
+      border-color: darken($color-twitter-blue, 15%);
     }
-  }  
-  
+  }
+
   &.facebook {
-    border-color: #3b5998;
-    color: #3b5998;
+    border-color: $color-facebook-blue;
+    color: $color-facebook-blue;
     
-    svg {
-      margin-top: -5px;
-    }
-    
-    &:hover, 
+    &:hover,
     &:focus {
-      background: #3b5998;
+      background: $color-facebook-blue;
       color: #fff;
     }
-    
+
     &:active {
-      background: darken(#3b5998, 15%);
-      border-color: darken(#3b5998, 15%);
-    }    
+      background: darken($color-facebook-blue, 15%);
+      border-color: darken($color-facebook-blue, 15%);
+    }
   }
 }
 
 /* Media Queries ---------------------- */
 
 @media (min-width: 40em) {
-
   html {
-    font-size: $base-font-size*1.2;
+    font-size: $base-font-size * 1.2;
   }
-  
-  menu, ol, ul {
-    padding: 0 0 0 30px
-  }
-    
+
   article {
-    padding: 0 $base-padding*2;
+    padding: 0 $base-padding * 2;
   }
-  
-  h1, 
+
+  h1,
   .article-meta {
     text-align: left;
   }
-  
+
   .article-meta {
     margin: 0;
   }
-  
+
   .full-width {
     width: 70vw;
     position: relative;
@@ -226,21 +203,21 @@ figcaption {
     right: 50%;
     margin-left: -35vw;
     margin-right: -35vw;
-  } 
-  
+  }
+
   .article-meta-button {
     font-size: 0.9em;
-    
+
     svg {
       height: 1.2em;
       width: 1.2em;
       margin-right: 6px;
     }
-  
+
     span {
       display: inline-block;
     }
-    
+
     b {
       display: none;
     }
@@ -248,5 +225,4 @@ figcaption {
 }
 
 @media (min-width: 62em) {
-
 }
