--- a/src/scss/_print.scss
+++ b/src/scss/_print.scss
@@ -33,7 +33,7 @@
             max-width: 50%;
             left: 0 !important;
             position: relative !important;
-            @include vendor-prefix(transform,translate(0,0) !important);
+            transform: translate(0,0) !important;
         }
     }
 
