--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,7 @@ $base-font-size: 1rem;
 $base-line-height: 1.5;
 
 $color-font: #333;
-$color-light: #666;
+$color-light: #767676;
 $color-off-white: #fefefe;
 $color-link: #8257FB;
 $color-green: #57ad68;
@@ -15,8 +15,9 @@ $color-facebook-blue: #3b5998;
 $font-size-small: 0.875rem;
 $font-size-base: 1rem;
 $font-size-medium: 1.25rem;
-$font-size-large: 2rem;
-$font-size-xlarge: 2.5rem;
+$font-size-large: 1.5rem;
+$font-size-xlarge: 2rem;
+$font-size-xxlarge: 3rem;
 
 /* Mixins ---------------------- */
 
