--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -2,7 +2,7 @@
 
 article {
   margin: 0 auto;
-  max-width: 36rem;
+  max-width: 40rem;
   padding: 0 $base-padding;
   width: 100%;
 }
@@ -59,7 +59,6 @@ figcaption {
   color: $color-light;
   display: table;
   font-size: $font-size-small;
-  margin: 0 auto;
   text-align: left;
 
   img,
@@ -93,7 +92,7 @@ figcaption {
   border-radius: 0.2rem;
   color: #888;
   display: inline-block;
-  font-size: 0.8em;
+  font-size: $font-size-small;
   font-weight: 700;
   margin-right: $base-padding/2;
   padding: $base-padding/1.5 $base-padding;
@@ -104,7 +103,7 @@ figcaption {
   svg {
     height: 1em;
     margin-right: 3px;
-    margin-bottom: -4px;
+    margin-bottom: -2px;
     width: 1em;
   }
 
@@ -179,21 +178,8 @@ figcaption {
 /* Media Queries ---------------------- */
 
 @media (min-width: 40em) {
-  html {
-    font-size: $base-font-size * 1.2;
-  }
-
   article {
     padding: 0 $base-padding * 2;
-  }
-
-  h1,
-  .article-meta {
-    text-align: left;
-  }
-
-  .article-meta {
-    margin: 0;
   }
 
   .full-width {
@@ -211,6 +197,7 @@ figcaption {
     svg {
       height: 1.2em;
       width: 1.2em;
+      margin-bottom: -4px;
       margin-right: 6px;
     }
 
