--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -34,19 +34,20 @@ h6 {
 
 
 /* Typography  ---------------------- */
-p {
-  margin: 1em 0;
-}
 
 p, li {
-  line-height: 1.6;
-}
-
-.intro p {
   font-size: $font-size-medium;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
+p {
+  margin: 1em 0;
+
+  &.intro {
+    font-size: $font-size-large;
+    line-height: 1.4;
+  }
+}
 
 /* Headers  ---------------------- */
 
@@ -72,13 +73,18 @@ h6 {
 h1 {
   font-size: $font-size-xlarge;
   line-height: 1.2;
-  text-align: center;
+  margin-top: $base-padding * 3;
 }
 
 h2 {
   font-size: $font-size-large;
   line-height: 1.3;
   margin-top: $base-padding * 3;
+}
+
+h3 {
+  font-size: $font-size-medium;
+  line-height: 1.4;  
 }
 
 
@@ -102,14 +108,22 @@ ol li {
   padding-bottom: $base-padding/2;
 }
 
-menu, ol, ul {
+menu, 
+ol, 
+ul {
   padding: 0 0 0 24px
 }
 
 @media (min-width: 40em) {
-  menu,
-  ol,
-  ul {
-    padding: 0 0 0 30px;
-  } 
+  h1 {
+    font-size: $font-size-xxlarge;
+  }
+
+  h2 {
+    font-size: $font-size-xlarge;
+  }
+
+  h3 {
+    font-size: $font-size-large;
+  }
 }
