--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,9 +1,9 @@
 ﻿/* Load custom fonts ---------------------- */
 
-$typeface-base: 'Source Sans Pro', sans-serif;
+$typeface-base: 'Montserrat', sans-serif;
 $typeface-header: 'Merriweather', Georgia, serif;
 
-@import 'https://fonts.googleapis.com/css?family=Merriweather:700|Source+Sans+Pro:400,700&subset=latin';
+@import 'https://fonts.googleapis.com/css?family=Merriweather:700|Montserrat:300,700&subset=latin';
 
 html {
   font-family: sans-serif;
@@ -37,7 +37,7 @@ h6 {
 
 p, li {
   font-size: $font-size-medium;
-  line-height: 1.5;
+  line-height: 1.58;
 }
 
 p {
@@ -45,7 +45,7 @@ p {
 
   &.intro {
     font-size: $font-size-large;
-    line-height: 1.4;
+    line-height: 1.5;
   }
 }
 
@@ -91,8 +91,8 @@ h3 {
 /* Quote  ---------------------- */
 
 blockquote {
-  font-size: 1.5em;
-  line-height: 1.3;
+  font-size: 1.8em;
+  line-height: 1.5;
   color: $color-light;
   color: $color-link;
   text-align: center;
@@ -126,4 +126,11 @@ ul {
   h3 {
     font-size: $font-size-large;
   }
+}
+
+// Example: <span class="highlight">this text is highlighted</span>
+.highlight {
+  background: linear-gradient(to right, rgba(255,255,255,0) 0%, #ff0 30%, #ff0 70%, rgba(255,255,255,0) 100%);
+  margin: 0 -$base-padding;
+  padding: 0 $base-padding;
 }
