--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -83,7 +83,7 @@ figcaption {
   display: inline-block;
   font-size: $font-size-small;
   font-weight: 700;
-  margin: 0 $base-padding/2 0 0;
+  margin: 0 $base-padding/2 $base-padding/2 0;
   padding: $base-padding/1.5 $base-padding;
   text-align: center;
   text-decoration: none;
